Modified new addLimit function to properly filter for applicable Rollups, and added the corresponding addOrderBys function for use with imperative Apex rollup operations

--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -1535,7 +1535,7 @@ private class RollupFullRecalcTests {
       new Set<String>(),
       null
     );
-
+    fullRecalc.addOrderBys(new List<RollupOrderBy__mdt>(), ContactPointAddress.PreferenceRank);
     fullRecalc.execute(null, new List<ContactPointAddress>{ cpas[0] });
     fullRecalc.execute(null, new List<ContactPointAddress>{ cpas[1] });
 
